<resources>
    <string name="app_name">CampusBreeze</string>
    <string name="button_locate">Locate Me</string>
    <string name="button_message">Messages</string>
    <string name="hot_post_button">Hot</string>
    <string name="all_post_button">All</string>
    <string name="post_heading">Post Heading</string>
    <string name="post_text">Post Text</string>
    <string name="post_date">Date</string>
    <string name="insert_heading">Insert Heading</string>
    <string name="insert_text">Insert Text</string>
    <string name="google_map_api_key">AIzaSyDGN95VVHE3bXcKXLOLAa0GoFj5FH-5Rj8</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
