<?xml version="1.0" encoding="utf-8"?>
<android.widget.Toolbar  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="wrap_content"
    android:layout_height="?attr/actionBarSize"
    android:minHeight="?attr/actionBarSize"
    android:background="@drawable/blue_ridge_mountains"
    android:elevation="6dp"
    android:layout_gravity="top"
    android:collapseContentDescription="UNCA"
    android:collapseIcon="@drawable/blue_ridge_mountains"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/fresca"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/hotPostButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/fresca"
        android:text="@string/hot_post_button" />

    <Button
        android:id="@+id/allPostButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="92dp"
        android:layout_toEndOf="@+id/hotPostButton"
        android:fontFamily="@font/fresca"
        android:text="@string/all_post_button" />


</android.widget.Toolbar >